# rocket-github-auth

./: .env.example  Cargo.toml  Rocket.toml
src/: main.rs
templates/: index.tera  redirect.tera  user.tera
