[package]
name = "rocket-github-auth"
version = "0.1.0"
authors = ["Pika <pika@thom.guide>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
reqwest = "0.9.5"
serde_json = "1.0.33"
serde_derive = "1.0.82"
dotenv = "0.13.0"
rand = "0.6.1"
serde = "1.0.82"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = true
features = ["tera_templates"]
